<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/base_toolbar" />

    <RelativeLayout
        android:id="@+id/login_div"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/background_login_div_bg"
        android:padding="15dp">
        <!-- 邀请码 -->
        <TextView
            android:id="@+id/login_user_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:textColor="#020203"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/username_edit"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_below="@id/login_user_input"
            android:drawableLeft="@mipmap/bb_dh"
            android:background="@drawable/btn_style"
            android:hint="@string/input_username"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="16sp" />
        <!-- 密码 text -->
        <TextView
            android:id="@+id/login_password_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/username_edit"
            android:textColor="#020203"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/password_edit"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:drawableLeft="@mipmap/bb_mm"
            android:layout_below="@id/login_password_input"
            android:background="@drawable/btn_style"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_edit"
            android:layout_marginTop="20dp"
            android:text="@string/rember"
            android:textSize="15sp" />
        <!-- 登录button -->

    </RelativeLayout>

    <Button
        android:id="@+id/signin_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/password_edit"
        android:layout_below="@id/password_edit"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_style_color"
        android:text="@string/login_label_signin"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/register"
        android:paddingTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textlink"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>
